test/cases/compile_errors/cast_ptr_to_slice_of_larger.zig
export fn foo(ptr: *u8) void {
    const slice: []align(1) u16 = @ptrCast(ptr);
    _ = slice;
}

// error
//
// :2:35: error: type 'u8' does not divide exactly into destination elements
